# pucklogic-ui

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pucklogic_architecture.docx  pucklogic_architecture.md  turbo.json
apps/api/: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
apps/api/core/: config.py  dependencies.py
apps/api/docs/state/: workflow-state.md
apps/api/ml/: evaluate.py  loader.py  shap_compute.py  train.py
apps/api/models/: schemas.py
apps/api/repositories/: __init__.py  draft_sessions.py  league_profiles.py  player_stats.py  players.py  projections.py  rankings.py  scoring_configs.py  sources.py  subscriptions.py  trends.py
apps/api/routers/: auth.py  draft_sessions.py  entitlements.py  exports.py  health.py  league_profiles.py  players.py  rankings.py  scoring_configs.py  sources.py  stripe.py  trends.py  user_kits.py
apps/api/scrapers/: base.py  base_projection.py  elite_prospects.py  hockey_reference.py  matching.py  moneypuck.py  nhl_com.py  nhl_edge.py  nst.py  platform_positions.py  schedule_scores.py
apps/api/scrapers/projection/: __init__.py  apples_ginos.py  daily_faceoff.py  dobber.py  fantrax.py  hashtag_hockey.py  lineup_experts.py  yahoo.py
apps/api/services/: cache.py  draft_sessions.py  entitlements.py  exports.py  feature_engineering.py  projections.py  rankings.py  scoring_validation.py
apps/api/tests/: test_dependencies.py  test_health.py
apps/api/tests/ml/: conftest.py  test_evaluate.py  test_loader.py  test_shap_compute.py  test_train.py  test_train_smoke.py
apps/api/tests/models/: test_schemas.py
apps/api/tests/repositories/: test_draft_sessions.py  test_league_profiles.py  test_player_stats.py  test_players.py  test_trends.py  (+5 more)
(+279 files in other folders)
